--- a/hw10/quotes/quotesapp/templates/quotesapp/base.html
+++ b/hw10/quotes/quotesapp/templates/quotesapp/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>Note information</title>
+    <title>Quote information</title>
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css"/>
     {% load static %}
     <link rel="stylesheet" href="{% static 'quotesapp/style.css' %}">
