--- a/hw10/quotes/quotesapp/templates/quotesapp/author.html
+++ b/hw10/quotes/quotesapp/templates/quotesapp/author.html
@@ -1,33 +1,6 @@
-{% extends "quotesapp/base.html" %}
+{% extends "quotesapp/base.html" %} {% block content %}
 
-{% block content %}
-
-<form method="POST" action="{% url 'quotesapp:author' %}">
-    {% csrf_token %}
-    <div style="padding: 10px">
-        <label> Author name:
-            {{ form.fullname }}
-        </label>
-        <span>{{ form.errors.name }}</span>
-    </div>
-    <div style="padding: 10px">
-        <label> Born:
-            {{ form.born_date }}
-        </label>
-        <laber> Place of birth:
-            {{form.born_location}}
-            </laber>
-        <span>{{ form.errors.name }}</span>
-    </div>
-    <div style="padding: 10px">
-        <label> Author description:
-            {{ form.description }}
-        </label>
-        <span>{{ form.errors.description }}</span>
-    </div>
-    <div class="grid">
-        <button type="submit">Submit</button>
-        <button type="reset" class="secondary">Reset</button>
-    </div>
-</form>
+<h1>{{author.fullname}}</h1>
+<p>Born: <b>{{author.born_date}}</b> <b>{{author.born_location}}</b></p>
+<p>Description: <bd>{{author.description}}</bd></p>
 {% endblock %}
