--- a/hw10/quotes/quotesapp/templates/quotesapp/index.html
+++ b/hw10/quotes/quotesapp/templates/quotesapp/index.html
@@ -14,6 +14,7 @@
   </ul>
   <ul>
     <li>Welcome <b>{{ user.username }}!</b></li>
+    <li><a href="{% url 'users:profile' %}" role="button">Profile</a></li>
     <li><a href="{% url "users:logout" %}" role="button">Logout</a></li>
   </ul>
   {% else %}
